# DiscordBot

./: Cargo.toml  README.md  Shuttle.toml
src/: build.rs  counters.rs  league.rs  main.rs  matches.rs  tierlist.rs  versus.rs  weather.rs
src/shared/: mod.rs  requests.rs  types.rs  util.rs
