[package]
name = "nelson-test-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
tokio = "1.26.0"
tracing = "0.1.37"
