[package]
name = "ugg_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
criterion = "0.5.1"
futures = "0.3.31"
headless_chrome = "1.0.15"
html5ever = "0.29.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
retry = "2.0.0"
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
strum = "0.26.3"
thirtyfour = "0.35.0"
tokio = "1.26.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.19"
unicode-width = "0.2.0"
